--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="half-width">
              <h2>Big Dream</h2>
-             <h3>Beacome DuckNationa's No 1 Web Developer</h3>
+             <h3>Become DuckNationa's No 1 Web Developer</h3>
              <p>Doo is a dreamer. He is a nice and well mannered duck. He believes no one can stop him from fulling his dreams. All he want is to be dead passionate and work very hard.</p>  
              <a class="link-button" target="_blank" href="https://www.google.com/">Download Resume</a> 
          </div>               
